# SudokuSolver

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  board.cpp  board.h  doxyfile.txt  gameboard.cpp  gameboard.h  main.cpp  step.h  todo  util.h
conf/: game-a.su  game-solved.su
html/: annotated.html  board-initializer_8h.html  board-initializer_8h_source.html  class_board_initializer-members.html  class_board_initializer.html  class_gameboard-members.html  class_gameboard.html  class_generator-members.html  class_generator.html  class_move-members.html  class_solver-members.html  class_solver.html  classdirectory__not__found__exception-members.html  classdirectory__not__found__exception.html  classenv__not__set__exception-members.html  classenv__not__set__exception.html  classes.html  classfile__not__found__exception-members.html  classfile__not__found__exception.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  gameboard_8h.html  gameboard_8h_source.html  generator_8h.html  generator_8h_source.html  hierarchy.html  index.html  move_8h.html  move_8h_source.html  solver_8h.html  solver_8h_source.html  struct_move.html  util_8h_source.html
include/: board-initializer.h  flo-solver.h  gameboard.h  generator.h  kp.h  move.h  solver.h  solvers.h  tobi-solver.h  util.h
src/: CMakeLists.txt  board-initializer.cpp  flo-solver.cpp  gameboard.cpp  generator.cpp  main.cpp  move.cpp  solver.cpp  tobi-solver.cpp  util.cpp
test/: CMakeLists.txt  CMakeLists.txt.in
(+30 files in other folders)
